sesi 7/4. resource example/ingress/ingress_laravel.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: laravel-app.kelasdevops.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: laravel
                port:
                  number: 80
